--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ em{
     margin: 10px
 }
 .flex-image{
-width: 900px;
+display:block;
+width: 100%;
 }
 a#justeret-hyperlink{
     font-family: "Sofia", sans-serif;
@@ -79,4 +80,20 @@ a#justeret-hyperlink:hover{
     font-family: "Sofia", sans-serif;
     color:#ee7777;
     text-decoration: none;
+}
+.grid-container{
+    display: grid;
+    grid-auto-columns: 1fr;
+}
+.grid1{
+grid-column: 1/3;
+grid-row 1;
+}
+.grid2{
+grid-column: 3/3;
+grid-row 2;
+}
+.grid3{
+grid-column: 2/3;
+grid-row 3;
 }
