--- a/style.css
+++ b/style.css
@@ -59,11 +59,11 @@ em{
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
-.flex{
+.flex-element{
     width: 200px;
     height: 200px;
-    background-color: red;
-    border: #333333 solid 5px;
+    background-color: lightgoldenrodyellow;
+    border: #333333 solid 3px;
     margin: 10px
 }
 .flex-image{
@@ -82,18 +82,45 @@ a#justeret-hyperlink:hover{
     text-decoration: none;
 }
 .grid-container{
+    box-sizing: border-box;
     display: grid;
     grid-auto-columns: 1fr;
+    grid-auto-rows: 200px;
 }
 .grid1{
-grid-column: 1/3;
-grid-row 1;
+    grid-row 1;
+    grid-column: 3;
 }
 .grid2{
-grid-column: 3/3;
-grid-row 2;
+    grid-row 2;
+    grid-column: 2;
+;
 }
 .grid3{
-grid-column: 2/3;
-grid-row 3;
+    grid-row 3;
+    grid-column: 1;
+}
+.grid-element{
+    background-color: lightgreen;
+    border: #333333 solid 3px;
+}
+.grid4{
+    background-color:lightsalmon;
+    grid-row: 3;
+    grid-column: 2 / 4;
+}
+.grid5{
+    background-color: lightskyblue;
+    grid-row: 1 / 3;
+    grid-column: 1;
+}
+.grid6{
+    background-color: lightpink;
+    grid-row: 1;
+    grid-column: 2;
+}
+.grid7{
+    background-color: lightpink;
+    grid-row: 2;
+    grid-column: 3;
 }
