--- a/style.css
+++ b/style.css
@@ -88,16 +88,16 @@ a#justeret-hyperlink:hover{
     grid-auto-rows: 200px;
 }
 .grid1{
-    grid-row 1;
+    grid-row: 1;
     grid-column: 3;
 }
 .grid2{
-    grid-row 2;
+    grid-row: 2;
     grid-column: 2;
 ;
 }
 .grid3{
-    grid-row 3;
+    grid-row: 3;
     grid-column: 1;
 }
 .grid-element{
