--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a#justeret-hyperlink:hover{
     display: grid;
     grid-auto-columns: 1fr;
     grid-auto-rows: 200px;
+    margin-top: 40px;
 }
 .grid1{
     grid-row: 1;
@@ -129,4 +130,8 @@ a#justeret-hyperlink:hover{
 }
 button{
     height: auto;
+}
+#visualGridContainer{
+    grid-template-columns: 100;
+    grid-template-rows: 100;
 }
