--- a/style.css
+++ b/style.css
@@ -134,4 +134,8 @@ button{
 #visualGridContainer{
     grid-template-columns: 100;
     grid-template-rows: 100;
+    grid-auto-rows: 10px;
+}
+.visualGridElement{
+    border: none;
 }
