--- a/style.css
+++ b/style.css
@@ -134,8 +134,8 @@ button{
 #visualGridContainer{
     grid-template-columns: 100;
     grid-template-rows: 100;
-    grid-auto-rows: 10px;
+    grid-auto-rows: 20px;
 }
 .visualGridElement{
-    border: none;
+    border-width: 1px;
 }
